<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/funde"
    android:gravity="center|top"
    tools:context=".login_hb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textColor="@color/amarelo"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:paddingTop="50dp"
            android:textSize="22pt"
            />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/contorno"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:textColor="@color/claro"
            android:textColorHint="@color/claro"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:textColorHint="@color/claro"
            android:textColor="@color/claro"
            android:textSize="10pt"
            android:background="@drawable/contorno"
            android:layout_marginStart="20dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"/>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/contorno_claro"
            android:text="@string/Entrar"
            android:textColor="#000"
            android:textSize="8pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/esqueceu"
            android:textColor="@color/branco"
            android:textSize="10pt"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="10pt" />


    </LinearLayout>

</RelativeLayout>