<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/funde"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center|top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/intr"
            android:textAlignment="center"
            android:textColor="@color/claro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/logar"
            android:textAlignment="center"
            android:textColor="@color/claro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnProximo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/contorno"
            android:text="@string/login"
            android:textColor="@color/claro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:text="@string/ou"
            android:textColor="@color/claro"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/redes"
            android:textColor="@color/claro"
            android:textAlignment="center"
            android:textSize="18sp"
            android:paddingTop="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img3" />
    </LinearLayout>

</RelativeLayout>







